# Required initializer
AC_INIT

# Automake initialization
AM_INIT_AUTOMAKE(cwinux, 1.0)

# Add a test for a compiler.
AC_PROG_CC
AM_PROG_LIBTOOL


AC_DEFUN([LIBEVENT_DIR],[

    AC_ARG_WITH(
        xml_expat,
        [  --with-xml-expat[=DIR]        expat for xml directory],
        ,
        [with_xml_expat="no"]
    )

    if test "$with_xml_expat" = "no"; then
        AC_MSG_ERROR( You need to specify the expat for xml directory using --with-xml-expat)
    else
        # make sure that a well known include file exists
        if test -e $with_xml_expat/include/expat.h; then
            xml_expat_dir=$with_xml_expat
            AC_MSG_RESULT(xml-expat found!)
        else
            AC_MSG_ERROR( $with_xml_expat not found.  Check the value you specified with --with-xml-expat)
        fi
    fi

])

LIBEVENT_DIR

AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_FILE_OFFSET_BITS,64)
AC_DEFINE(_LARGEFILE64_SOURCE)
AC_DEFINE(_REENTRANT)
AC_DEFINE(_GNU_SOURC)


# The AC_SUBST macro causes the variable to be saved in config.status
AC_SUBST(xml_expat_dir)

# Write config.status and the Makefile
AC_OUTPUT(Makefile)
AC_OUTPUT(lib/cmn/src/Makefile)
AC_OUTPUT(lib/parse/src/Makefile)
AC_OUTPUT(lib/store/src/Makefile)
AC_OUTPUT(lib/net/src/Makefile)
AC_OUTPUT(lib/poco/src/Makefile)
AC_OUTPUT(lib/util/src/Makefile)
AC_OUTPUT(lib/app/src/Makefile)
AC_OUTPUT(tool/blog_reader/Makefile)

