
SUBDIRS = lib/cmn/src lib/parse/src lib/store/src lib/net/src lib/poco/src lib/util/src lib/app/src  tool/blog_reader tool/mgr_client

doc:
	cd lib/cmn/src&&make doc&&cd ../../../
	cd lib/parse/src&&make doc&&cd ../../../
	cd lib/store/src&&make doc&&cd ../../../
	cd lib/net/src&&make doc&&cd ../../../
	cd lib/poco/src&&make doc&&cd ../../../
	cd lib/util/src&&make doc&&cd ../../../
	cd lib/app/src&&make doc&&cd ../../../
